Fix drag pixmap with wrapped lines

BUG: 476979